src/assetbundles/src/css/Translations.css
/* ... */
#trial-notice .link {
    display: inline-block;
    padding: 0 10px ;
}

.translations-about .link {
    padding-bottom: 15px;
}

.translations-about .link a {
    padding-right: 15px;
}

.static-trans-footer .pagination {
    display: none;
}

.footer-order-navigation{
    background-color: #f3f7fc;
    border-radius: 0 0 5px 5px;
    display: flex;
    justify-content: space-between;
    margin: 0px -24px -24px -24px;
    padding: 10px 24px;
}

.top-order-navigation{
    background-color: #f3f7fc;
    border-radius: 5px 5px 0 0;
    display: flex;
    justify-content: space-between;
    margin: -24px -24px 20px -24px;
    padding: 10px 24px;
}

.top-order-navigation span,
.footer-order-navigation span{
    margin: 0px 10px;
}

.footer-order-navigation a,
.top-order-navigation a{
    color: #606d7b;
    transition: color linear 100ms;
}

.footer-order-navigation a:hover,
.top-order-navigation a:hover{
    color: #0B69A3;
}

/* CSS Used in Order Create and Details page */

.publish-row {
    background-color: lightgray;
    height: 3em;
    padding: 10px;
}

.close-publish-modal {
    font-size: 20px;
}

.float-right {
    float: right !important;
}

.pl-10 {
    padding-left: 10px;
}

.pt-10 {
    padding-top: 10px !important;
}

.pt-5 {
    padding-top: 5px !important;
}

.w-300 {
    width: 300px;
}

.w-100 {
    width: 100%;
}

.fw-400 {
    font-weight: 400;
}

.ml-auto {
    margin-left: auto;
}

.mr-auto {
    margin-right: auto !important;
}

.h-6 {
    height: 6em;
}

.h-10 {
    height: 10em;
}

.h-8 {
    height: 8em;
}

.h-7 {
    height: 7em;
}

.pr-10 {
    padding-right: 10em;
}

.mb-1 {
    margin-bottom: 1em;
}

.p-0 {
    padding: 0 !important;
}

.ml-10 {
    margin-left: 10px;
}

.df {
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.scroll-x-auto {
    overflow-x: auto;
    align-items: center;
}

.clone-modal-tr {
    cursor: pointer;
}

.scroll-y-auto {
    overflow-y: auto;
    height: 90%;
}

.position-fixed {
    position: fixed;
    width: 65%;
}

.mt-4 {
    margin-top: 4em;
}

select[name="version"] {
    width: 120px;
}

.diff-tl {
    font-size: 10px;
}

.diff-copy {
    cursor: pointer;
    fill: #3f4d5a;
    padding: 10px;
    position: absolute;
    right: 0;
    top: 0;
}

.target {
    border-top: 1px solid rgba(51, 64, 77, 0.1) !important;
    width: 50%;
}

.source {
    border-right: 1px solid rgba(51, 64, 77, 0.1);
    border-top: 1px solid rgba(51, 64, 77, 0.1) !important;
    width: 50%;
}

td.source{
    vertical-align: top;
}

td.target{
    vertical-align: top;
}

#diffTable {
    border-radius: 0 0 5px 5px;
    border-top: 0px !important;
    border: 1px solid rgba(51, 64, 77, 0.1);
    width: 100%;
}

.bg-none {
    background: none !important;
    cursor: pointer !important;
}



.processing {
    background-color: #ced8e5 !important;
}

.color-red {
    color: red;
}

.mr--10 {
    margin-right: -10px;
}

.bg-white {
    background: white;
}

.inline-flex {
    display: inline-flex;
}

.align-center {
    align-items: center;
}

.display-none {
    display: none;
}

